--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "jquery": "^3.3.1",
     "vue": "^2.5.16",
     "vuex": "^3.0.1"
   },
