--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.0-beta.15",
-    "@vue/cli-plugin-eslint": "^3.0.0-beta.15",
-    "@vue/cli-service": "^3.0.0-beta.15",
-    "@vue/eslint-config-airbnb": "^3.0.0-rc.3",
+    "@vue/cli-plugin-babel": "^3.0.0-rc.8",
+    "@vue/cli-plugin-eslint": "^3.0.0-rc.8",
+    "@vue/cli-service": "^3.0.0-rc.8",
+    "@vue/eslint-config-airbnb": "^3.0.0-rc.8",
     "vue-template-compiler": "^2.5.16"
   }
 }
