--- a/package.json
+++ b/package.json
@@ -16,15 +16,15 @@
     "@fortawesome/vue-fontawesome": "^0.1.1",
     "i": "^0.3.6",
     "jquery": "^3.3.1",
-    "npm": "^6.3.0",
-    "vue": "^2.5.16",
+    "npm": "^6.4.0",
+    "vue": "^2.5.17",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.0-rc.8",
-    "@vue/cli-plugin-eslint": "^3.0.0-rc.8",
-    "@vue/cli-service": "^3.0.0-rc.8",
-    "@vue/eslint-config-airbnb": "^3.0.0-rc.8",
-    "vue-template-compiler": "^2.5.16"
+    "@vue/cli-plugin-babel": "^3.0.1",
+    "@vue/cli-plugin-eslint": "^3.0.1",
+    "@vue/cli-service": "^3.0.1",
+    "@vue/eslint-config-airbnb": "^3.0.1",
+    "vue-template-compiler": "^2.5.17"
   }
 }
