--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "npm": "^6.4.0",
     "pickr-widget": "^0.2.2",
     "vue": "^2.5.17",
+    "vue-dragscroll": "^1.5.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
