--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "vuex": "^3.1.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.1.1",
-    "@vue/cli-plugin-eslint": "^4.1.1",
-    "@vue/cli-service": "^4.1.1",
-    "@vue/eslint-config-airbnb": "^3.0.5",
-    "eslint": "^4.19.1",
+    "@vue/cli-plugin-babel": "^4.1.2",
+    "@vue/cli-plugin-eslint": "^4.1.2",
+    "@vue/cli-service": "^4.1.2",
+    "@vue/eslint-config-airbnb": "^4.0.0",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^5.16.0",
+    "eslint-plugin-vue": "^6.1.1",
     "vue-template-compiler": "^2.6.11"
   },
   "license": "GPL-3.0-or-later"
